convert java to kotlin. add interceptor to avoid attacking. update url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions = true
+server.port=8080
+server.host=localhost
+
+
+logging.level.root=info
+logging.level.top.info.zhairong=debug
+logging.file.name=./log/rz
